@@ -1295,7 +1295,15 @@ cmd_return(key_info_t key_info, keys_info_t *keys_info)
 			real_start++;
 		}
 
+		if(sub_mode == CLS_COMMAND)
+		{
+			commands_scope_start();
+		}
 		curr_stats.save_msg = exec_commands(real_start, curr_view, cmd_type);
+		if(sub_mode == CLS_COMMAND)
+		{
+			curr_stats.save_msg = (commands_scope_finish() != 0);
+		}
 	}
 	else if(sub_mode == CLS_PROMPT)
 	{
